--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -1,29 +1,15 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <h1>THESE ARE CONTACTS</h1>
 
-    <table>
-    <tr>
-        <th>First Name</th>
-        <th>Last Name</th>
-        <th>Email</th>
-        <th>Note</th>
-    </tr>
+
+    <h1>There are <%=@contacts.length%> contacts</h1>
+
+<ul>
+
+
   <% @contacts.each do |contact| %>
-    <tr>
-        <td><%=contact.first_name%></td>
-        <td><%=contact.last_name%></td>
-        <td><%=contact.email%></td>
-        <td><%=contact.note%></td>
-    </tr>
+    <ul>
+        <li><%=contact.first_name%>
+        <%=contact.last_name%>
+        <%=contact.email%></li>
+    </ul>
   <% end %>
-</table>
-
-  </body>
-  <footer><a href="/index"Main></a> </footer>
-</html>
+</ul>
