don't use 1 or 2

--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -9,7 +9,9 @@
     <ul>
         <li><%=contact.first_name%>
         <%=contact.last_name%>
-        <%=contact.email%></li>
+        <%=contact.email%>
+        <%=contact.id%>
+      </li>
     </ul>
   <% end %>
 </ul>
