--- a/views/index.erb
+++ b/views/index.erb
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <h1>What up my dude</h1>
+    <h1>What up my dude Here is an awesome database</h1>
 
   </body>
   <footer><a href="/contacts"Contacts></a> </footer>
